fix flickering

--- a/src/styles/title/title.scss
+++ b/src/styles/title/title.scss
@@ -2,9 +2,11 @@
 
 #app-title {
   flex-grow: 1;
+  height: 32px;
+  margin: 16px 5px 0 5px;
 
   h2 {
-    margin: 16px 5px 0 5px;
+    margin: 0;
     padding: 5px;
     font-size: 18px;
     font-weight: normal;
